# chunk-memo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_PYPI.md  codex_conversation_1.md  license  pyproject.toml  session-ses_4205.md  swarm_memo.py
.github/workflows/: publish.yml
benchmarks/: bench_parallel.py  memo_warm_benchmark.py  shard_benchmark.py  simple.py
chunk_memo/: __init__.py  _format.py  cache.py  cache_index.py  data_write_utils.py  identity.py  memo.py  runner_protocol.py  runners.py  runners_common.py  runners_parallel.py
examples/: basic.py  callable_axis_values.py  import_test.py
shard_memo/: __init__.py  _format.py  bridge.py  cache.py  cache_index.py  cache_layout.py  core_deprecated.py  memo.py  run_utils.py  runner_protocol.py  runners.py  runners_common.py  runners_parallel.py
swarm_memo/: __init__.py  bridge.py  core.py  memo.py
tests/: conftest.py  test_bridge.py  test_chunk_memo.py  test_parallel.py  test_parallel_map.py  test_shard_memo.py  test_swarm_memo.py  utils.py
