[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-memo"
version = "0.1.0"
description = "Swarm parallel memoization with chunked caching."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Farrell", email = "matthew.farrell.235@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "joblib>=1.5.3",
]

[project.optional-dependencies]
test = ["pytest", "flaky>=3.8.1"]

[project.urls]
Repository = "https://github.com/msf235/swarm-memo"

[tool.pytest.ini_options]
markers = ["flaky: rerun flaky tests"]

[tool.hatch.build.targets.wheel]
packages = ["swarm_memo"]

[tool.hatch.build.targets.sdist]
include = [
    "swarm_memo/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CHANGELOG.md",
]
